--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@graphql-yoga/plugin-jwt": "^3.9.1",
     "graphql": "^16.11.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt": "^0.2.0",
     "zod": "^4.1.5"
   }
